2002-11-06  Miguel de Icaza  <miguel@ximian.com>

	* StreamWriter.cs: Changed all Encoding.UTF8 to Encoding.UTF8Unmarked.

2002-10-31  Dick Porter  <dick@ximian.com>

	* FileStream.cs: Fix buffering properly this time.  Also kludge
	around broken pipe errors, treating them as EOF instead of
	throwing an IO exception.

	* MonoIO.cs: Return the error status in a parameter, as the
	GetLastError() value has long since been blown away if we try and
	look it up in a subsequent internal call invocation.

	* FileSystemInfo.cs: 
	* FileInfo.cs: 
	* File.cs: 
	* Directory.cs: MonoIO methods now have an error parameter

2002-10-31  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TextReader.cs: implemented ReadBlock ().

2002-10-30  Miguel de Icaza  <miguel@ximian.com>

	* StreamWriter.cs: Ditto for Null stream.

	* BinaryReader.cs: Use Unmarked here too.

	* BinaryWriter.cs: Use the UTF8Unmarker encoding by default, this
	is what .NET does.

2002-10-23  Dick Porter  <dick@ximian.com>

	* FileStream.cs: Implemented CanSeek, and used it around all the
	calls to MonoIO.Seek.  Fixed buffering in Read() so that it
	doesn't block forever on short reads.

	* MonoFileType.cs: New enum for GetFileType
	
	* MonoIO.cs: Added GetFileType

2002-10-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* StreamReader.cs: ReadLine now treats a \r not followed by a \n as a
	\n (this is what MS does).

2002-10-18  Dick Porter  <dick@ximian.com>

	* FileStream.cs: SeekOrigin.End still calculates the offset from
	the end of the file with positive values extending the length.
	Fixes bug 32471.

2002-10-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Path.cs: some cleanup. Thanks to Martin Aliger.

2002-10-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* FileStream.cs: throw an exception if trying to open a directory.
	Thanks to Martin Aliger.

2002-10-02  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Path.cs: fixes bug #28046.

2002-09-27  Gonzalo Paniagua Javier <gonzalo@ximian.com>
